@@ -1049,9 +1049,9 @@ handle_song_listing (DMAPConnection *connection,
 			     "filesize", (guint64) size,
 			     "format", format,
 			     "title", title,
-			     "album", album,
-			     "artist", artist,
-			     "genre", genre,
+			     "daap.songalbum", album,
+			     "daap.songartist", artist,
+			     "daap.songgenre", genre,
 			     "sort-artist", sort_artist,
 			     "sort-album", sort_album,
 			      NULL);
